# aeternum-devops-cli

./: .coveragerc  .gitignore  Dockerfile  README.md  compare_versions.sh  justfile  pyproject.toml
.github/: release_notes_template.md
.github/actions/setup-python-workspace/: action.yaml
.github/release/: 0.0.3.md
.github/workflows/: docker-test.yaml  feature-testing.yaml  integration-testing.yml  python-base.yml  release.yaml  testing.yaml  unit-testing.yaml
aeternum/: __init__.py  build.py  constants.py  doctor.py  errors.py  handler.py  main.py  models.py  output.py
aeternum/command/: build.py  doctor.py  init.py  run.py
aeternum/core/: constants.py  errors.py  handler.py  models.py  writer.py
tests/: conftest.py  test_basic.py  test_build.py  test_doctor.py  test_errors.py  test_init.py  test_models.py  test_output.py
tests/features/: README.md  __init__.py  basics.feature  environment.py  stubs.py
tests/features/steps/: cli_steps.py  environment_steps.py  file_assertion_steps.py  file_helper_steps.py  utils.py
tests/features/testcases/: basics.feature  doctor.feature  run.feature
tests/shared/resources/invalid_files/: aeternum-invalid-working-dir.yaml  aeternum-no-tests.yaml  aeternum-working-file.yaml  invalid-file-type.json
tests/shared/resources/references/: generated_spec.yaml
tests/test_helpers/: file_utils.py  function_patches.py  runner.py
tests/unit/: conftest.py  test_basic.py  test_build.py  test_doctor.py  test_init.py  test_logging.py  test_models.py  test_run.py
tools/: parse_coverage.py
trial/: sample.yaml
(+5 files in other folders)
